--- a/job-card-vue/src/assets/main.css
+++ b/job-card-vue/src/assets/main.css
@@ -10,15 +10,15 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #141414;
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
-  a:hover {
+  /* a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
-  }
+  } */
 }
 
 @media (min-width: 1024px) {
